--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "city-tour-project",
+  "name": "react-city-tour-project-ongoing",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
